--- a/prod/argocd.yaml
+++ b/prod/argocd.yaml
@@ -21,3 +21,15 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: webapp
+spec:
+  type: NodePort
+  selector:
+    app: web
+  ports:
+  - port: 31500
+    targetPort: 80
